# k3lso3_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/k3lso_msgs/share/k3lso_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/k3lso_vectornav/lib/k3lso_vectornav/: k3lso_vectornav
install/k3lso_vectornav/share/k3lso_vectornav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/test_perf_cpp/lib/test_perf_cpp/: talker
install/test_perf_cpp/share/test_perf_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/test_perf_py/lib/test_perf_py/: imu_pub  imu_pub_tim  imu_sub  motor_cli  motor_ser
install/test_perf_py/share/test_perf_py/: package.bash  package.dsv  (+4 more)
k3lso_description/: CMakeLists.txt  README.md  package.xml
k3lso_description/launch/: k3lso_rviz.launch.py
k3lso_description/meshes/k3lso_v1/: abduct_fl.STL  abduct_fr.STL  abduct_hl.STL  abduct_hr.STL  body.STL  shank_fl.STL  shank_fr.STL  shank_hl.STL  shank_hr.STL  thigh_fl.STL  thigh_fr.STL  thigh_hl.STL  thigh_hr.STL  toe_fl.STL  toe_fr.STL  toe_hl.STL  toe_hr.STL
k3lso_description/rviz/: k3lso.rviz
k3lso_description/urdf/: ghost.urdf  k3lso_v1.urdf  k3lso_v2.urdf
k3lso_moteus/: CMakeLists.txt  README.md  package.xml
k3lso_moteus/include/moteus_pcan/: definitions.h  moteus_pcan_controller.h  moteus_pcan_interface.h  moteus_pcan_motor.h
k3lso_moteus/src/: k3lso_moteus_node.cpp
k3lso_moteus/src/moteus_pcan/: moteus_pcan_controller.cpp  moteus_pcan_interface.cpp  moteus_pcan_motor.cpp
k3lso_msgs/: CMakeLists.txt  README.md  package.xml
k3lso_msgs/srv/: MotorsSetTorque.srv  MotorsStep.srv
k3lso_robot/: CMakeLists.txt  package.xml
k3lso_robot/launch/: k3lso_rviz_monitor.launch.py
k3lso_vectornav/: CMakeLists.txt  README.md  package.xml
k3lso_vectornav/include/rt/: rt_vectornav.h
k3lso_vectornav/src/: k3lso_vectornav_node.cpp
k3lso_vectornav/src/rt/: rt_vectornav.cpp
log/: latest_build
test_perf_cpp/: CMakeLists.txt
test_perf_cpp/src/: publisher_member_function.cpp
test_perf_py/: setup.cfg  setup.py
test_perf_py/test_perf_py/: imu_pub.py  imu_pub_tim.py  imu_sub.py
(+38 files in other folders)
